spacing issue in Economic graphs tab pie charts resolved

--- a/htmlFrames/style_resultFrame.css
+++ b/htmlFrames/style_resultFrame.css
@@ -384,7 +384,6 @@ tr:hover {
   }
   .rightE {
     width: 100%;
-    height: 300px; /* Adjust height as needed */
   }
   #landUseTitleEconCost, #landUseTitleEconRev, #landUseTitleEconProfit {
     text-align: center;
